Fix weird layout bug

--- a/web-app/src/styles/modes_menu.css
+++ b/web-app/src/styles/modes_menu.css
@@ -30,7 +30,6 @@
 
 .settings {
     max-width: 50px;
-    margin: 14%;
 }
 
 .setting-link{
